# wagtail-site-settings

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
site_settings/: models.py
site_settings/migrations/: 0001_initial.py
