[tool.poetry]
name = "wagtail-site-settings"
version = "2023.1.0"
description = "Generic wagtail site settings"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "site_settings"}
]

[tool.poetry.dependencies]
python = ">= 3.10"
django = ">= 4.1"
wagtail = ">=5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
